<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".user.UserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/layout_style"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="17dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pover"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pover"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bc"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/bc"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diametr"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="DIA"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/days"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editTextHowDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <CheckBox android:id="@+id/enabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Включить уведомления о смене линз"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:onClick="onCheckboxClicked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selection"/>
    </LinearLayout>

    <Button
        android:id="@+id/bSave"
        style="@style/RoundedCornerButt"
        android:layout_width="227dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:onClick="onClickSave"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="@color/textColorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>