<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/layout_style"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/pover"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tVPower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/bc"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvBC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/textColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/diametr"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/tvDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/textColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvLastChange"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lastChange"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/select_date"
                android:onClick="openCalendar"
                android:textColor="@color/textColor"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvNextChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/next_change"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textColor" />

        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:text="SAVE"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/textColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectDay"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="REMINDER"
        android:textColor="@color/textColorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


<!--    <LinearLayout-->
<!--        android:id="@+id/whichDay"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginBottom="35dp"-->
<!--        android:background="@drawable/text_witch_day"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonSave">-->

        <ProgressBar
            android:id="@+id/progress_days"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circle_animation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave"/>

    <TextView
        android:id="@+id/howDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:paddingTop="100dp"
        android:text="@string/use_lenses"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#304240"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progress_days"
        app:layout_constraintEnd_toEndOf="@+id/progress_days"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/progress_days"
        app:layout_constraintTop_toTopOf="@+id/progress_days"
        app:layout_constraintVertical_bias="0.172" />


    <TextView
        android:id="@+id/howDaysQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:textColor="#1B1818"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/progress_days"
        app:layout_constraintEnd_toEndOf="@+id/howDays"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/howDays"
        app:layout_constraintTop_toBottomOf="@+id/howDays"
        app:layout_constraintVertical_bias="0.269" />

    <LinearLayout
        android:id="@+id/reminderWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDay">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="         Выбранное время и дата напоминания:"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tvNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/textColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setAlarm"
            style="@style/RoundedCornerButt"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="72dp"

            android:text="Set Alarm"
            android:textColor="@color/textColorButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelAlarm"
            style="@style/RoundedCornerButt"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:text="Cancel ALarm"
            android:textColor="@color/textColorButton" />
    </LinearLayout>

    <!--    <CalendarView-->
    <!--        android:id="@+id/calendarView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:onClick="onClick"-->
    <!--        android:selectedWeekBackgroundColor="#ff0000"-->
    <!--        android:weekNumberColor="#0000ff"-->
    <!--        android:weekSeparatorLineColor="#00ff00"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
    <!--        tools:layout_editor_absoluteX="0dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>